hc::code-primer: Fix e688e5d2f361689e6bdf1204344d6100c6147918

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -173,7 +173,7 @@ print_r($entries);
   <li><code>$serendipity['dbPersistent']</code>: Whether to use persistent connections</li>
 </ul>
 
-<p>On top of that (or below), certain variables that are not included in the Serendipity Configuration panel can be configured in this file; If they are not present, the Serendipity defaults will be used, though not all of them are really meant to to be touched. Such variables are:</p>
+<p>On top of that (or below), certain variables that are not included in the Serendipity Configuration panel can be configured in this file; If they are not present, the Serendipity defaults will be used, though not all of them are really meant to be touched. Such variables are:</p>
 
 <ul class="plainList">
   <li><code>$serendipity['production']</code>: If set to “false” you can evoke extra debugging output when errors occur. If set to “debug”, it will be extra-verbose. (default: based on version, RC and alpha/betas default to false)</li>
