hc::code-primer: Add f0ffe83aa64e3eb2e96fb47de444f45cc0afc403 variables to Local configuration

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -453,6 +453,9 @@ print_r($entries);
   <li><code>$serendipity['lang_content_negotiation']</code>: Boolean whether user’s browser-language is used</li>
   <li><code>$serendipity['enablePluginACL']</code>: Boolean whether configuration of plugins applies permission checks</li>
   <li><code>$serendipity['updateCheck']</code>: Boolean whether performing update checks is allowed</li>
+  <li><code>$serendipity['logLevel']</code>: If set, enables using the Katzgrau KLogger (writes to “templates_c/logs/”). If set to “debug”, be extra verbose (default: ‘Off’)</li>
+  <li><code>$serendipity['fetchLimit']</code>: How many entries to display (default 15)</li>
+  <li><code>$serendipity['RSSfetchLimit']</code>: How many entries to display within RSS feed (default 15)</li>
   <li><code>$serendipity['archiveSortStable']</code>: Boolean whether pagination URLs start with the pages enumerated from first or last page</li>
   <li><code>$serendipity['searchsort']</code>: Default sort order for sorting search results</li>
   <li><code>$serendipity['enforce_RFC2616']</code>: Boolean whether for RSS feeds Conditional Get may be used (see <a href="configuration.html#docs-appearance-and-options">Configuration</a>)</li>
