--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -453,6 +453,7 @@ print_r($entries);
   <li><code>$serendipity['lang_content_negotiation']</code>: Boolean whether user’s browser-language is used</li>
   <li><code>$serendipity['enablePluginACL']</code>: Boolean whether configuration of plugins applies permission checks</li>
   <li><code>$serendipity['updateCheck']</code>: Boolean whether performing update checks is allowed</li>
+  <li><code>$serendipity['updateReleaseFileUrl']</code>: Update RELEASE-file URL string to apply a different RELEASE file location for custom core downloads in combination with the Serendipity Autoupdate plugin.</li>
   <li><code>$serendipity['logLevel']</code>: If set, enables using the Katzgrau KLogger (writes to “templates_c/logs/”). If set to “debug”, be extra verbose (default: ‘Off’)</li>
   <li><code>$serendipity['fetchLimit']</code>: How many entries to display (default 15)</li>
   <li><code>$serendipity['RSSfetchLimit']</code>: How many entries to display within RSS feed (default 15)</li>
