hc::code-primer: fix blockReferer variable in Local configuration

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -465,7 +465,7 @@ print_r($entries);
   <li><code>$serendipity['embed']</code>: Boolean whether embedded mode is enabled (see <a href="configuration.html#docs-appearance-and-options">Configuration</a>)</li>
   <li><code>$serendipity['top_as_links']</code>: Boolean whether links outputted by exit/referrer tracking are clickable (anti-spam)</li>
   <li><code>$serendipity['trackReferer']</code>: Boolean whether referrer tracking is enabled</li>
-  <li><code>$serendipity['blogReferer']</code>: List of referrer URL patters that shall be blocked</li>
+  <li><code>$serendipity['blockReferer']</code>: List of referrer URL patters that shall be blocked</li>
   <li><code>$serendipity['useServerOffset']</code>: Boolean whether the timezone of the server and the authors differs</li>
   <li><code>$serendipity['serverOffsetHours']</code>: How many hours timezone difference are between server and authors</li>
   <li><code>$serendipity['showFuturEentries']</code>: Whether to show entries from the future</li>
