hc::code-primer: Add another new 2.0 variable in Local configuration

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -495,6 +495,7 @@ print_r($entries);
   <li><code>$serendipity['mediaExif']</code>: Whether to parse EXIF information of uploaded files</li>
   <li><code>$serendipity['mediaProperties']</code>: Which meta information shall be available in the media database</li>
   <li><code>$serendipity['mediaKeywords']</code>: Specifies a list of available keywords to tag media files with</li>
+  <li><code>$serendipity['allowLocalURL']</code>: Boolean whether to allow to fetch data from local URLs</li>
 </ul>
 
 <h5 id="docs-personal-configuration">Personal Configuration</h5>
