hc::code-primer: Add a new 3.0 variable in Local configuration

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -489,6 +489,7 @@ print_r($entries);
   <li><code>$serendipity['maxFileSize']</code>: Maximum file size of uploaded files</li>
   <li><code>$serendipity['maxImgWidth']</code>: Maximum width for uploaded images</li>
   <li><code>$serendipity['maxImgHeight']</code>: Maximum height for uploaded images</li>
+  <li><code>$serendipity['enableAVIF']</code>: Boolean whether to enable the use of AVIF image variations</li>
   <li><code>$serendipity['uploadResize']</code>: Boolean whether to resize images to maximum size before uploading</li>
   <li><code>$serendipity['onTheFlySynch']</code>: Boolean whether every call to the MediaLibrary checks for updated files</li>
   <li><code>$serendipity['dynamicResize']</code>: Whether to allow Frontend visitors to resize thumbnails on demand</li>
