hc::i18n: Remove outdated example

--- a/hc/en/i18n.html
+++ b/hc/en/i18n.html
@@ -170,7 +170,7 @@
 
 <p>which would always format the time like “2008-10-28 15:00” in every language. The parameters are documented on the <a href="http://php.net/strftime">php.net/strftime documentation</a>.</p>
 
-<p>Plus, some templates (like bulletproof) offer you a template option field where you can choose your favorite (language independent) date format. This allows you to change the dateformat without the need to edit any file.</p>
+<p>Plus, some templates offer you a template option field where you can choose your favorite (language independent) date format. This allows you to change the dateformat without the need to edit any file.</p>
                 </div>
             </div>
         </div>
