hc::code-primer: Update "Other files and directories"

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -295,7 +295,6 @@ print_r($entries);
   <li><strong>bundled-libs/</strong>: External libraries like Smarty and other (see above)</li>
   <li><strong>deployment/</strong>: Stub directory for shared installations (see above)</li>
   <li><strong>docs/</strong>: ChangeLog and other documentation</li>
-  <li><strong>htmlarea/</strong>: Bundled CKEditor WYSIWYG</li>
   <li><strong>include/</strong>: Internal code libraries</li>
   <li><strong>include/admin/</strong>: Code workflow used for Backend (see below)</li>
   <li><strong>include/admin/importers/</strong>: Data export/import modules (see below)</li>
@@ -305,7 +304,7 @@ print_r($entries);
   <li><strong>plugins/</strong>: Plugin files</li>
   <li><strong>sql/</strong>: SQL database creation files</li>
   <li><strong>templates/</strong>: Theme files</li>
-  <li><strong>templates_c/</strong>: Compile directory for cached templates (and other temporary data)</li>
+  <li><strong>templates_c/</strong>: Compile directory for cached templates (assets and other temporary data)</li>
   <li><strong>tests/</strong>: Draft ideas for unit tests</li>
 </ul>
 
