--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -400,15 +400,15 @@
         <h4 class="plugin_summary">Timezones</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_timezones</dt>
-            <dd class="plugin_version">Version 0.6 (GPL, Last Updated 2019-08-18)</dd>
-            <dd class="plugin_maintainers">Christoph Eunicke &lt;s9y-plugin@eunicke.org&gt;</dd>
+            <dd class="plugin_version">Version 0.7 (GPL, Last Updated 2022-02-07)</dd>
+            <dd class="plugin_maintainers">Christoph Eunicke &lt;s9y-plugin@eunicke.org&gt;, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Shows the time of up to four timezones</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_plugin_timezones.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_plugin_timezones">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_timezones" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_plugin_timezones" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_plugin_timezones/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
