book: SimpleLightbox init testing

--- a/book/index.html
+++ b/book/index.html
@@ -376,5 +376,5 @@ if (document.readyState == "DOMContentLoaded") {
 <a href="#" id="toTop" style="display: inline;"><span id="toTopHover"></span>To Top</a>
 
 <script src="/js/styx.min.js"></script>
-<script> new SimpleLightbox('figure a.lightbox[rel="lightbox"], span.box a.lightbox[rel="lightbox"]', { fileExt : 'avif|webp' }); </script>
+<script> new SimpleLightbox('a.lightbox[rel="lightbox"]', { fileExt : 'avif|webp' }); </script>
 </body></html>
