hc::media-migration-tasks: Improve d84e3ec985f9fe5c94c8c5bdce2cce3f6a7c46a4

--- a/hc/en/media-migration-tasks.html
+++ b/hc/en/media-migration-tasks.html
@@ -115,7 +115,7 @@
                             <li>Regenerate all (<em>*.</em>) thumbnails (<em>which don't exist yet)</em>,</li>
                             <li>Resize thumbnails (<em>which don't exist yet by config set size)</em> and</li>
                             <li>Synchronizes your database images table with Image directories.</li>
-                            <li>Keep in mind: For AVIF (see below), manually added files and these first two SYNC tasks may extend your server resources.</li>
+                            <li>Keep in mind: For AVIF (see below), manually added files and these first two SYNC tasks may extend your timing or server resources.</li>
                         </ul>
                         </li>
                         <li><strong><em>Keep existing thumbnails only if they are the correct size</em></strong><br>
