book: Update march 2022

--- a/book/index.html
+++ b/book/index.html
@@ -586,7 +586,7 @@ sie ist!</p>
 <p>&nbsp;</p><!-- separator -->
 
 <p>Ian Styx, für die <strong>Serendipity Styx Edition</strong></p>
-<p>Februar 2022.</p>
+<p>März 2022.</p>
 
 <p>&nbsp;</p><!-- separator -->
 
