book: Fix 734edc208fdc42007b0aaaf0ae4d84da47b6deb9

--- a/book/index.html
+++ b/book/index.html
@@ -18332,7 +18332,7 @@ Siehe: <span class="pageref"><a href="#generelle-einstellungen">Generelle Einste
 <section id="serendipity_event_emoticate" class="sub">
 <span class="u-toc">6.1.2 - Textformatierung: Smilies: serendipity_event_emoticate</span>
 
-<h3 class="subsection" id=">sub_serendipity_event_emoticate">Textformatierung: Smilies<br>serendipity_event_emoticate<a class="anchorjs-link" href="#sub_serendipity_event_emoticate" aria-label="Anchor" data-anchorjs-icon=""></a></h3>
+<h3 class="subsection" id="sub_serendipity_event_emoticate">Textformatierung: Smilies<br>serendipity_event_emoticate<a class="anchorjs-link" href="#sub_serendipity_event_emoticate" aria-label="Anchor" data-anchorjs-icon=""></a></h3>
 
 <p class="tagging invisible">
 <span class="label invisible" id="emoticate">emoticate</span>
